--- a/PL/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Login.cshtml
@@ -126,7 +126,7 @@
         padding: 10px 0;
         font-size: 20px;
         border-radius: 40px;
-        letter-spacing: 1px;
+       /*  letter-spacing: 1px; */
         cursor: pointer;
         background: linear-gradient(45deg, #0ef, #c800ff);
     }
