--- a/PL/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,67 +1,189 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Registrarse";
 }
-
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<body>
+    <div class="wrapper">
+        <div class="row">
+            <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form">
+                <h1 class="title"> @ViewData["Title"]</h1>
+                <h2 class="footer">Crea una cuenta nueva.</h2>
+                <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+                <div class="inp">
+                    <input asp-for="Input.Email" class="input" autocomplete="username" aria-required="true" placeholder="Correo" />
+                    @*   <label asp-for="Input.Email">Correo</label> *@
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+                </div>
+                <div class="inp">
+                    <input asp-for="Input.Password" class="input" autocomplete="new-password" aria-required="true" placeholder="Contraseña" />
+                    @*   <label asp-for="Input.Password">Contraseña</label> *@
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
+                </div>
+                <div class="inp">
+                    <input asp-for="Input.ConfirmPassword" class="input" autocomplete="new-password" aria-required="true" placeholder="Confirmar Contraseña" />
+                    @* <label asp-for="Input.ConfirmPassword">Confirmar Contraseña</label> *@
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                </div>
+                <button id="registerSubmit" type="submit" class="submit">Registrarse</button>
+            </form>
+            <div></div>
+            <div class="banner">
+                <h1 class="wel_text">
+                    Bienvenido
+                </h1>
+                <p class="para">
+                    a la Biblioteca <img src="/Images/Logo.png" heigh="40px" width="35" alt=""></a>
+                </p>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.Password">Password</label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="password" />
-                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
+            @* <div class="col-md-6 col-md-offset-2">
+            <section>
             <h3>Use another service to register.</h3>
             <hr />
             @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
+            if ((Model.ExternalLogins?.Count ?? 0) == 0)
+            {
+            <div>
+            <p>
+            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
+            about setting up this ASP.NET application to support logging in via external services</a>.
+            </p>
+            </div>
             }
-        </section>
+            else
+            {
+            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+            <div>
+            <p>
+            @foreach (var provider in Model.ExternalLogins!)
+            {
+            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+            }
+            </p>
+            </div>
+            </form>
+            }
+            }
+            </section>
+            </div> *@
+        </div>
     </div>
-</div>
+</body>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+<style>
+    * {
+        margin: 0;
+        padding: 0;
+        font-family: arial;
+        color: #fff;
+    }
+
+    body {
+        width: 100vw;
+        height: 100vh;
+        background: #081b29;
+        display: grid;
+        justify-content: center;
+        align-content: center;
+    }
+
+    ::-webkit-input-placeholder {
+        color: #eee;
+    }
+
+    .wrapper {
+        position: relative;
+        width: 800px;
+        height: 65vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        border: 3px solid #00ffff;
+        box-shadow: 0 0 50px 0 #00a6bc;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .title {
+        font-size: 35px;
+        color: #fff;
+    }
+
+    .inp {
+        padding-bottom: 10px;
+        border-bottom: 2px solid #eee;
+    }
+
+    .input {
+        border: none;
+        outline: none;
+        background: none;
+        width: 260px;
+        margin-top: 40px;
+        padding-right: 10px;
+        font-size: 17px;
+        color: #0ef;
+    }
+
+    .submit {
+        border: none;
+        outline: none;
+        width: 288px;
+        margin-top: 25px;
+        padding: 10px 0;
+        font-size: 20px;
+        border-radius: 40px;
+        /* letter-spacing: 1px; */
+        cursor: pointer;
+        background: linear-gradient(45deg, #0ef, #c800ff);
+    }
+
+    .footer {
+        margin-top: 30px;
+        /* letter-spacing: 0.5px; */
+        font-size: 15px;
+        color: #fff;
+    }
+
+    .link {
+        color: #0ef;
+        text-decoration: none;
+    }
+
+    .banner {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 450px;
+        height: 390px;
+        background: linear-gradient(to right,#0ef, #c800ff );
+        clip-path: polygon(0 0,100% 0,100% 100%, 60% 100%);
+        padding-right: 70px;
+        text-align: right;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .wel_text {
+        font-size: 40px;
+        margin-top: -50px;
+        line-height: 50px;
+    }
+
+    .para {
+        margin-top: 10px;
+        font-size: 18px;
+        line-height: 24px;
+        letter-spacing: 1px;
+    }
+</style>
