--- a/PL/Views/Shared/_Layout.cshtml
+++ b/PL/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="" asp-controller="Medio" asp-action="GetAll">Medios</a>
+                                </li> 
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="TipoMedio" asp-action="GetAll">Tipos Medios</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" asp-area="" asp-controller="Idioma" asp-action="GetAll">Idiomas</a>
