--- a/PL/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/PL/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,9 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Olvidé la confirmación de contraseña";
+    ViewData["Title"] = "Olvido la confirmación de contraseña"; //Forgot password confirmation
 }
 
+<br />
 <h1>@ViewData["Title"]</h1>
 <p>
     Por favor revisa tu correo electrónico para restablecer tu contraseña.
