--- a/PL/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
+++ b/PL/Areas/Identity/Pages/Account/LoginWith2fa.cshtml
@@ -31,7 +31,7 @@
 </div>
 <p>
     ¿No tienes acceso a tu dispositivo autenticador? Puede
-    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">inicie sesión con un código de recuperación</a>.
+    <a id="recovery-code-login" asp-page="./LoginWithRecoveryCode" asp-route-returnUrl="@Model.ReturnUrl">iniciar sesión con un código de recuperación</a>.
 </p>
 
 @section Scripts {
