--- a/PL/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/PL/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -1,11 +1,13 @@
 ﻿@page
 @model ResendEmailConfirmationModel
 @{
-    ViewData["Title"] = "Reenviar confirmación por correo electrónicon";
+    ViewData["Title"] = "Reenviar confirmación por correo electrónico";
 }
 
+<br />
 <h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<br />
+<h2>Introduce tu correo electrónico.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
