--- a/PL/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Register.cshtml
@@ -127,7 +127,7 @@
         outline: none;
         background: none;
         width: 260px;
-        margin-top: 40px;
+        margin-top: 25px;
         padding-right: 10px;
         font-size: 17px;
         color: #0ef;
@@ -147,7 +147,7 @@
     }
 
     .footer {
-        margin-top: 30px;
+        margin-top: 10px;
         /* letter-spacing: 0.5px; */
         font-size: 15px;
         color: #fff;
@@ -178,6 +178,7 @@
         font-size: 40px;
         margin-top: -50px;
         line-height: 50px;
+        color: #fff;
     }
 
     .para {
