--- a/PL/Views/Editorial/GetAll.cshtml
+++ b/PL/Views/Editorial/GetAll.cshtml
@@ -18,14 +18,14 @@
 
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-success" id="btnAdd" onclick="btnAdd()">+</button>
+            <button type="button" class="btn btn-success" id="btnAdd" onclick="btnAdd()"><i class="bi bi-journal-plus"></i> Nueva</button>
         </div>
     </div>
     <br />
     <div class="row">
         <div class="col-md-12 table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead>
+            <table class="table table-striped table-bordered border-primary border-3">
+                <thead class="table-dark">
                     <tr>
                         <th class="text-center">Editar</th>
                         <th class="text-center" hidden>IdEditorial</th>
@@ -38,6 +38,8 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div class="row" id="errorAlert">
     </div>
     <br />
     <br />
