--- a/PL/Views/Rol/GetAll.cshtml
+++ b/PL/Views/Rol/GetAll.cshtml
@@ -19,17 +19,14 @@
     <hr />
     <div class="row">
         <div class="col-md-12">
-            <button type="button" class="btn btn-success" id="btnAdd" onclick="BtnAdd()">+</button>
+            <button type="button" class="btn btn-success" id="btnAdd" onclick="BtnAdd()"><i class="bi bi-plus-circle"></i> Nuevo</button>
         </div>
     </div>
     <br />
-
-    @* @if (Model.Count > 0)
-    { *@
     <div class="row">
         <div class="col-md-12 table-responsive">
-            <table class="table table-striped table-bordered">
-                <thead>
+            <table class="table table-striped table-bordered border-primary border-3">
+                <thead class="table-dark">
                     <tr>
                         <td style="display: none;">id</td>
                         <th class="text-center">Asignar Rol</th>
@@ -39,34 +36,16 @@
                     </tr>
                 </thead>
                 <tbody id="tBodyRol">
-                    @* @foreach (var role in Model)
-                    { *@
-                    @* <tr>
-                    <td style="text-align: center; vertical-align: middle;"><a class="btn btn-success glyphicon" href="@Url.Action("Asignar", "Rol", new { IdRole = role.Id, Name= role.Name})"><i class="bi bi-person-gear" style="color: ivory"></i></a></td>
-                    <td style="display: none;">@role.Id </td>
-
-                    <td>@role.Name</td> *@
-
-                    @*IdRole es un Parametro tipo Guid*@
-                    @* <td style="text-align: center; vertical-align: middle;"><a class="btn btn-warning glyphicon" href="@Url.Action("Form", "Rol", new { IdRole = role.Id, Name= role.Name})"><i class="bi bi-pencil" style="color: ivory"></i></a></td>
-                    <td style="display: none;">@role.Id </td>     *@                                                                                 @*La variable IdRole se llama así porque esta declarada como parametro en La Action del Contolador tal cual*@
-
-                    @*IdRole es un Parametro tipo Guid*@
-                    @* <td style="text-align: center; vertical-align: middle;"><a class="btn btn-danger glyphicon glyphicon-trash" href="@Url.Action("Delete", "Rol",  new { IdRole = role.Id })" onclick="return confirm('¿Estas seguro que deseas eliminar el rol?');"><i class="bi bi-trash" style="color: mintcream"></i></a></td>
-                    </tr> *@
-                    @* } *@
                 </tbody>
             </table>
 
         </div>
     </div>
-    @* }
-    else
-    {
-    <div class="alert alert-danger alert-dismissible" role="alert">
-    No existen registros.
+
+    <div class="row" id="errorAlert">
     </div>
-    } *@
+    <br />
+    <br />
 </div>
 
 
@@ -156,7 +135,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script type="text/javascript">
-        
+
     </script>
 
 } *@
