--- a/PL/Areas/Identity/Pages/Account/Register.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Register.cshtml
@@ -3,6 +3,9 @@
 @{
     ViewData["Title"] = "Registrarse";
 }
+<head>
+    <link rel="stylesheet" href="~/css/login_style.css" asp-append-version="true" />
+</head>
 <body>
     <div class="wrapper">
         <div class="row">
@@ -27,8 +30,9 @@
                 </div>
                 <button id="registerSubmit" type="submit" class="submit">Registrarse</button>
             </form>
-            <div></div>
+            <form id="account" method="post" class="form">
             <div class="banner">
+                <br /><br />
                 <h1 class="wel_text">
                     Bienvenido
                 </h1>
@@ -36,36 +40,8 @@
                     a la Biblioteca <img src="/Images/Logo.png" heigh="40px" width="35" alt=""></a>
                 </p>
             </div>
-            @* <div class="col-md-6 col-md-offset-2">
-            <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-            if ((Model.ExternalLogins?.Count ?? 0) == 0)
-            {
-            <div>
-            <p>
-            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-            about setting up this ASP.NET application to support logging in via external services</a>.
-            </p>
-            </div>
-            }
-            else
-            {
-            <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-            <div>
-            <p>
-            @foreach (var provider in Model.ExternalLogins!)
-            {
-            <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-            }
-            </p>
-            </div>
             </form>
-            }
-            }
-            </section>
-            </div> *@
+            
         </div>
     </div>
 </body>
@@ -73,118 +49,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: arial;
-        color: #fff;
-    }
-
-    body {
-        width: 100vw;
-        height: 100vh;
-        background: #081b29;
-        display: grid;
-        justify-content: center;
-        align-content: center;
-    }
-
-    ::-webkit-input-placeholder {
-        color: #eee;
-    }
-
-    .wrapper {
-        position: relative;
-        width: 800px;
-        height: 65vh;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        border: 3px solid #00ffff;
-        box-shadow: 0 0 50px 0 #00a6bc;
-    }
-
-    .form {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .title {
-        font-size: 35px;
-        color: #fff;
-    }
-
-    .inp {
-        padding-bottom: 10px;
-        border-bottom: 2px solid #eee;
-    }
-
-    .input {
-        border: none;
-        outline: none;
-        background: none;
-        width: 260px;
-        margin-top: 25px;
-        padding-right: 10px;
-        font-size: 17px;
-        color: #0ef;
-    }
-
-    .submit {
-        border: none;
-        outline: none;
-        width: 288px;
-        margin-top: 25px;
-        padding: 10px 0;
-        font-size: 20px;
-        border-radius: 40px;
-        /* letter-spacing: 1px; */
-        cursor: pointer;
-        background: linear-gradient(45deg, #0ef, #c800ff);
-    }
-
-    .footer {
-        margin-top: 10px;
-        /* letter-spacing: 0.5px; */
-        font-size: 15px;
-        color: #fff;
-    }
-
-    .link {
-        color: #0ef;
-        text-decoration: none;
-    }
-
-    .banner {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 450px;
-        height: 390px;
-        background: linear-gradient(to right,#0ef, #c800ff );
-        clip-path: polygon(0 0,100% 0,100% 100%, 60% 100%);
-        padding-right: 70px;
-        text-align: right;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-end;
-    }
-
-    .wel_text {
-        font-size: 40px;
-        margin-top: -50px;
-        line-height: 50px;
-        color: #fff;
-    }
-
-    .para {
-        margin-top: 10px;
-        font-size: 18px;
-        line-height: 24px;
-        letter-spacing: 1px;
-    }
-</style>
