--- a/PL/Views/Home/Index.cshtml
+++ b/PL/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
+<head>
+    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+</head>
+<body>
 <br />
 <div class="d-flex align-items-center justify-content-center" style="min-height: 65vh;">
     <div class="text-center rounded-3 p-5">
@@ -9,3 +12,4 @@
         <p>Descubre mundos entre páginas la biblioteca AJ es tu puerta a la imaginación.</p>
     </div>
 </div>
+</body>
