--- a/PL/Views/Idioma/GetAll.cshtml
+++ b/PL/Views/Idioma/GetAll.cshtml
@@ -3,10 +3,13 @@
     ViewData["Title"] = "GetAll";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<head>
+    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+</head>
+<body>
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12"><br />
             <h2>Idiomas</h2>
         </div>
     </div>
@@ -96,7 +99,7 @@
         </div>
     }
 </div>
-
+</body>
 @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
