--- a/PL/Views/Rol/GetAll.cshtml
+++ b/PL/Views/Rol/GetAll.cshtml
@@ -7,7 +7,10 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script type="text/javascript" src="~/js/Roles/RoleCRUD.js"></script>
-
+<head>
+    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+</head>
+<body>
 <br />
 
 <div class="container">
@@ -130,7 +133,7 @@
         </div>
     </div>
 </div>
-
+</body>
 @* @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
