--- a/PL/Views/tipoMedio/GetAll.cshtml
+++ b/PL/Views/tipoMedio/GetAll.cshtml
@@ -3,11 +3,16 @@
     ViewData["Title"] = "GetAll";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<head>
+    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+</head>
+<body>
 
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
-            <h2>TipoMedio</h2>
+            <div class="col-md-12">
+                <br />
+            <h2>Tipo Medio</h2>
         </div>
     </div>
     <hr />
@@ -80,7 +85,7 @@
         </div>
     }
 </div>
-
+</body>
 @section scripts {
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
@@ -230,11 +235,5 @@
         }
 
     </script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#myTable').DataTable();
-        });
-    </script>
-
 }
 
