--- a/PL/Views/Home/Index.cshtml
+++ b/PL/Views/Home/Index.cshtml
@@ -2,14 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 <head>
-    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/carousel.css" asp-append-version="true" />
 </head>
-<body>
-<br />
-<div class="d-flex align-items-center justify-content-center" style="min-height: 65vh;">
+
+
+<div class="d-flex align-items-center justify-content-center" style="min-height: 45vh;">
     <div class="text-center rounded-3 p-5">
         <h1 class="display-4">Bienvenido a la Biblioteca AJ</h1>
         <p>Descubre mundos entre páginas la biblioteca AJ es tu puerta a la imaginación.</p>
     </div>
 </div>
-</body>
+<div class="carousel">
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+    <div class="carousel__face"></div>
+</div>
