--- a/PL/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Login.cshtml
@@ -42,7 +42,7 @@
                 </h6>
             </div>
         </form>
-        <div></div>
+        <div id="extension"></div>
         <form id="account" method="post" class="form">
             <div class="banner">
                 <br /><br />
@@ -56,6 +56,7 @@
         </form>
     </div>
 </body>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
