--- a/PL/Views/Medio/GetAll.cshtml
+++ b/PL/Views/Medio/GetAll.cshtml
@@ -18,7 +18,9 @@
         margin-left: 1em;
     }
 </style>
-
+<head>
+    <link rel="stylesheet" href="~/css/modulos.css" asp-append-version="true" />
+</head>
 <br />
 <div class="container">
     <div class="row">
@@ -147,8 +149,9 @@
                         <div class="row">
                             <div class="col-md-6">
                                 @Html.LabelFor(model => model.Archivo)
-
-                                <input type="file" id="archivo" name="archivo" />
+                                <br />
+                                <input type="file" id="archivo" name="archivo"/>
+                                <input type="text" id="archivoUpdate" hidden disabled/>
                             </div>
                         </div>
                         <br />
@@ -185,6 +188,7 @@
                                     }
                                 </div>
                                 @Html.HiddenFor(model => model.Imagen)
+                                <input type="text" id="imagenUpdate" hidden disabled/>
                             </div>
                         </div>
                         <div class="row">
