--- a/PL/wwwroot/css/Minty.css
+++ b/PL/wwwroot/css/Minty.css
@@ -2737,8 +2737,8 @@ textarea.form-control-lg {
     }
 
     .form-check-input:checked {
-        background-color: #78c2ad;
-        border-color: #78c2ad;
+        background-color: #c28a78; /*#78c2ad;*/
+        border-color: #c28a78; /*#78c2ad;*/
     }
 
         .form-check-input:checked[type=checkbox] {
@@ -3435,8 +3435,8 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-    --bs-btn-color: #fff;
-    --bs-btn-bg: #78c2ad;
+    /*--bs-btn-color: #fff;
+    --bs-btn-bg: #4b0e0e;;
     --bs-btn-border-color: #78c2ad;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #66a593;
@@ -3449,6 +3449,22 @@ textarea.form-control-lg {
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #78c2ad;
     --bs-btn-disabled-border-color: #78c2ad;
+
+*/
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #4b0e0e;
+    --bs-btn-border-color: #4b0e0e;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #4b0e0e;
+    --bs-btn-hover-border-color: #4b0e0e;
+    --bs-btn-focus-shadow-rgb: 140, 203, 185;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #4b0e0e;
+    --bs-btn-active-border-color: #4b0e0e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #4b0e0e;
+    --bs-btn-disabled-border-color: #4b0e0e;
 }
 
 .btn-secondary {
@@ -3469,7 +3485,7 @@ textarea.form-control-lg {
 }
 
 .btn-success {
-    --bs-btn-color: #fff;
+    /* --bs-btn-color: #fff;
     --bs-btn-bg: #56cc9d;
     --bs-btn-border-color: #56cc9d;
     --bs-btn-hover-color: #fff;
@@ -3482,7 +3498,22 @@ textarea.form-control-lg {
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #56cc9d;
-    --bs-btn-disabled-border-color: #56cc9d;
+    --bs-btn-disabled-border-color: #56cc9d;*/
+
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #633f11;
+    --bs-btn-border-color: #633f11;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #633f11;
+    --bs-btn-hover-border-color: #633f11;
+    --bs-btn-focus-shadow-rgb: 111, 212, 172;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #633f11;
+    --bs-btn-active-border-color: #633f11;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #633f11;
+    --bs-btn-disabled-border-color: #633f11;
 }
 
 .btn-info {
@@ -4272,7 +4303,7 @@ textarea.form-control-lg {
     padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
     font-size: var(--bs-nav-link-font-size);
     font-weight: var(--bs-nav-link-font-weight);
-    color: var(--bs-nav-link-color);
+    color: #aaa; /*var(--bs-nav-link-color);*/
     text-decoration: none;
     background: none;
     border: 0;
@@ -4349,7 +4380,7 @@ textarea.form-control-lg {
         .nav-pills .nav-link.active,
         .nav-pills .show > .nav-link {
             color: var(--bs-nav-pills-link-active-color);
-            background-color: var(--bs-nav-pills-link-active-bg);
+            background-color: #4b0e0e; /*var(--bs-nav-pills-link-active-bg);*/
         }
 
 .nav-underline {
@@ -9604,9 +9635,13 @@ textarea.form-control-lg {
     --bs-link-underline-opacity: 1;
 }
 
-.bg-primary {
+/*.bg-primary {
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+}*/
+.bg-primary {
+    --bs-bg-opacity: 1;
+    background-color: #4b0e0e;
 }
 
 .bg-secondary {
