--- a/PL/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model DeletePersonalDataModel
 @{
-    ViewData["Title"] = "Delete Personal Data";
+    ViewData["Title"] = "Eliminar datos personales"; /* Delete Personal Data */
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,8 +9,11 @@
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+        <strong>Al Eliminar estos datos se eliminará permanentemente su cuenta y no se podrá recuperar.</strong>
     </p>
+    @* <p>
+        <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+    </p> *@
 </div>
 
 <div>
@@ -19,12 +22,12 @@
         @if (Model.RequirePassword)
         {
             <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your password." />
+                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Por favor, introduzca su contraseña." /> @* Please enter your password. *@
                 <label asp-for="Input.Password" class="form-label"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="w-100 btn btn-lg btn-danger" type="submit">Eliminar datos y cerrar mi cuenta</button> @* Delete data and close my account *@
     </form>
 </div>
 
