--- a/PL/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/Disable2fa.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model Disable2faModel
 @{
-    ViewData["Title"] = "Disable two-factor authentication (2FA)";
+    ViewData["Title"] = "Deshabilitar la autenticación de dos factores (2FA)"; //Disable two-factor authentication
     ViewData["ActivePage"] = ManageNavPages.TwoFactorAuthentication;
 }
 
@@ -10,16 +10,20 @@
 
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>This action only disables 2FA.</strong>
+        <strong>Esta acción solo desactiva 2FA.</strong> @* //This action only disables 2FA. *@
     </p>
     <p>
+        Deshabilitar 2FA no cambia las claves utilizadas en las aplicaciones de autenticación. Si desea cambiar la clave
+        utilizado en una aplicación de autenticación, debe de  <a asp-page="./ResetAuthenticator">restablecer sus claves de autenticación.</a>
+    </p>
+    @* <p>
         Disabling 2FA does not change the keys used in authenticator apps. If you wish to change the key
         used in an authenticator app you should <a asp-page="./ResetAuthenticator">reset your authenticator keys.</a>
-    </p>
+    </p> *@
 </div>
 
 <div>
     <form method="post">
-        <button class="btn btn-danger" type="submit">Disable 2FA</button>
+        <button class="btn btn-danger" type="submit">Deshabilitar 2FA</button> @* Disable 2FA *@
     </form>
 </div>
