--- a/PL/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/ExternalLogins.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ExternalLoginsModel
 @{
-    ViewData["Title"] = "Manage your external logins";
+    ViewData["Title"] = "Administre sus inicios de sesión externos"; //Manage your external logins
     ViewData["ActivePage"] = ManageNavPages.ExternalLogins;
 }
 
@@ -22,7 +22,7 @@
                                 <div>
                                     <input asp-for="@login.LoginProvider" name="LoginProvider" type="hidden" />
                                     <input asp-for="@login.ProviderKey" name="ProviderKey" type="hidden" />
-                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName login from your account">Remove</button>
+                                    <button type="submit" class="btn btn-primary" title="Remove this @login.ProviderDisplayName inicie sesión desde su cuenta ">Eliminar</button> @*login from your account //Remove*@
                                 </div>
                             </form>
                         }
@@ -38,14 +38,14 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h4>Add another service to log in.</h4>
+    <h4>Añade otro servicio para iniciar sesión.</h4> @*Add another service to log in*@
     <hr />
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList">
             <p>
                 @foreach (var provider in Model.OtherLogins)
                 {
-                    <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                    <button id="@($"link-login-button-{provider.Name}")" type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Inicie sesión usando su @provider.DisplayName cuenta">@provider.DisplayName</button> @*Log in using your //account*@
                 }
             </p>
         </div>
