--- a/PL/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model PersonalDataModel
 @{
-    ViewData["Title"] = "Personal Data";
+    ViewData["Title"] = "Información personal"; /* Personal Data */
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
@@ -9,15 +9,17 @@
 
 <div class="row">
     <div class="col-md-6">
-        <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p>
+       @*  <p>Your account contains personal data that you have given us. This page allows you to download or delete that data.</p> *@
+        <p>Su cuenta contiene datos personales que usted nos ha proporcionado. Esta página le permite descargar o eliminar esos datos.</p>
         <p>
-            <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
+            @*<strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong> *@
+            <strong>Al eliminar estos datos se eliminará permanentemente su cuenta y no se podrá recuperar.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-primary" type="submit">Descargar</button> @* Download *@
         </form>
         <p>
-            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
+            <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Eliminar</a> @* Delete *@
         </p>
     </div>
 </div>
