--- a/PL/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/ShowRecoveryCodes.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ShowRecoveryCodesModel
 @{
-    ViewData["Title"] = "Recovery codes";
+    ViewData["Title"] = "Códigos de recuperación"; //Recovery codes
     ViewData["ActivePage"] = "TwoFactorAuthentication";
 }
 
@@ -9,10 +9,11 @@
 <h3>@ViewData["Title"]</h3>
 <div class="alert alert-warning" role="alert">
     <p>
-        <strong>Put these codes in a safe place.</strong>
+        <strong>Guarde estos códigos en un lugar seguro.</strong> @*Put these codes in a safe place.*@
     </p>
     <p>
-        If you lose your device and don't have the recovery codes you will lose access to your account.
+        Si pierde su dispositivo y no tiene los códigos de recuperación, perderá el acceso a su cuenta.
+       @*  If you lose your device and don't have the recovery codes you will lose access to your account. *@
     </p>
 </div>
 <div class="row">
