--- a/PL/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/PL/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -9,10 +9,10 @@
     }
 }
 
-<h1>Manage your account</h1>
+<h1>Gestiona tu cuenta</h1> @* Manage your account Administrar *@
 
 <div>
-    <h2>Change your account settings</h2>
+    <h2>Cambia la configuración de tu cuenta</h2> @* Change your account settings *@
     <hr />
     <div class="row">
         <div class="col-md-3">
